# Tester

./: Tester.cabal  stack.yaml
app/: Main.hs
src/: Everything.hs  Main.hs
test/: MainSpec.hs
