name:                Tester
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Tester#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Everything
  build-depends:       base >= 4.7 && < 5, threepenny-gui, random, mtl 
  default-language:    Haskell2010

executable Tester
  hs-source-dirs:      app 
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, Tester

test-suite spec
  build-depends:       base, Tester, hspec, threepenny-gui
  hs-source-dirs: test
  main-is: Spec.hs
  Type: exitcode-stdio-1.0 

